fixtures/semantic/invalid/04-vr-c6-c7-builtins.fl
component BuiltinVariant(
  variant hover: [default, active]
  variant tone: [primary, disabled] = primary
) {
  surface {}
}
